fix: Issue with the logo text wrapping when the screen was adjusted between 770 to 820px, corrected using nowrap and adjusting menu and logo sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,10 +49,10 @@ header a {
 }
 
 #menu {
-    font-size: 130%;
+    font-size: 120%;
     letter-spacing: 1px;
     list-style-type: none;
-    color: #F7EBE8;
+    color: #ffffff;
 }
 
 #menu > li {
@@ -179,7 +179,7 @@ main {
 }
 
 #times div {
-    color: #F7EBE8;
+    color: #ffffff;
     background-color: rgba(0, 0, 0, 0.6);
     padding: 15px;
     text-align: center;
@@ -218,12 +218,12 @@ main {
     background-position: center;
     padding: 20px 10% 0 10%;
     flex-grow: 1;
-    color: #fafafa;
+    color: #ffffff;
     font-family: 'Roboto', sans-serif;
 }
 
 #session-times {
-    color: #fafafa;
+    color: #ffffff;
     text-decoration: underline;
 }
 
@@ -234,17 +234,17 @@ main {
 }
 
 #contact-form>h2 {
-    color: #fafafa;
+    color: #ffffff;
     margin-bottom: 20px;
 }
 
 .text-input {
     background: transparent;
-    color: #fafafa;
+    color: #ffffff;
     width: 100%;
     height: 25px;
     margin: 5px 0 20px 0;
-    border: 1px solid #fafafa;
+    border: 1px solid #ffffff;
     border-radius: 2px;
     padding: 0 5px;
 }
@@ -262,7 +262,7 @@ main {
     padding: 15px 32px;
     font-size: 100%;
     background-color: #FF571F;
-    color: #fafafa;
+    color: #ffffff;
 }
 
 /* Footer */
@@ -300,7 +300,7 @@ footer {
         position: relative;
         box-shadow: none;
         width: fit-content;
-        padding-right: 1rem;
+        padding-right: 0.75rem;
     }
 
     #menu {
@@ -316,9 +316,10 @@ footer {
     }
 
     #logo {
-        font-size: 230%;
+        font-size: 220%;
         line-height: 75px;
         margin: 0 0.5rem;
+        white-space: nowrap;
     }
 
     /* Main content */
